src/objects/c2g__codaBankReconciliation__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpbankreconciliation</customHelpPage>
    <description>Stores the master details of a bank reconciliation.</description>
    <fields>
        <fullName>c2g__BankAccountCurrency__c</fullName>
        <formula>c2g__BankAccount__r.c2g__BankAccountCurrency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Account Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountNumber__c</fullName>
        <formula>c2g__BankAccount__r.c2g__AccountNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipName>Reconciliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankChargesAndInterest__c</fullName>
        <formula>c2g__InterestReceived__c + c2g__InterestPaid__c + c2g__BankCharges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Charges and Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BankCharges__c</fullName>
        <label>Bank Charges</label>
        <summarizedField>c2g__codaBankReconciliationCharge__c.c2g__Value__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaBankReconciliationCharge__c.c2g__Type__c</field>
            <operation>equals</operation>
            <value>Bank Charges</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaBankReconciliationCharge__c.c2g__BankReconciliation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__ClearedBalance__c</fullName>
        <formula>c2g__OpeningBalance__c + c2g__TotalReconciled__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cleared Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ClosingBalance__c</fullName>
        <label>Closing Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Difference__c</fullName>
        <formula>c2g__ClosingBalance__c - c2g__ClearedBalance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__InterestPaid__c</fullName>
        <label>Interest Paid</label>
        <summarizedField>c2g__codaBankReconciliationCharge__c.c2g__Value__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaBankReconciliationCharge__c.c2g__Type__c</field>
            <operation>equals</operation>
            <value>Interest Paid</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaBankReconciliationCharge__c.c2g__BankReconciliation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__InterestReceived__c</fullName>
        <label>Interest Received</label>
        <summarizedField>c2g__codaBankReconciliationCharge__c.c2g__Value__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaBankReconciliationCharge__c.c2g__Type__c</field>
            <operation>equals</operation>
            <value>Interest Received</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaBankReconciliationCharge__c.c2g__BankReconciliation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__OpeningBalance__c</fullName>
        <formula>c2g__PreviousReconciliation__r.c2g__ClosingBalance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opening Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipName>Reconciliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PreviousReconciliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Reconciliation</label>
        <referenceTo>c2g__codaBankReconciliation__c</referenceTo>
        <relationshipName>Reconciliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ReconciledItems__c</fullName>
        <label>Reconciled Items</label>
        <summarizedField>c2g__codaBankReconciliationLineItem__c.c2g__Value__c</summarizedField>
        <summaryForeignKey>c2g__codaBankReconciliationLineItem__c.c2g__BankReconciliation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__ReconciliationStatus__c</fullName>
        <label>Reconciliation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__StatementDate__c</fullName>
        <label>Statement Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__TotalReconciled__c</fullName>
        <formula>c2g__ReconciledItems__c + c2g__BankChargesAndInterest__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Reconciled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bank Reconciliation</label>
    <listViews>
        <fullName>FF_Fly_Now_Pay_Later_Limited_06936813_codaBankReconciliation</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Fly Now Pay Later Limited (06936813)</label>
        <queue>FF_Fly_Now_Pay_Later_Limited_06936813</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_Limited_codaBankReconciliation</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund Limited</label>
        <queue>FF_Travelfund_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_co_uk_Limited_codaBankReconciliation</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund.co.uk Limited</label>
        <queue>FF_Travelfund_co_uk_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__BankAccount__c</columns>
        <columns>c2g__BankAccountCurrency__c</columns>
        <columns>c2g__BankAccountNumber__c</columns>
        <columns>c2g__ClosingBalance__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bank Reconciliation Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Reconciliations</pluralLabel>
    <recordTypes>
        <fullName>c2g__Uncontrolled</fullName>
        <active>true</active>
        <label>Uncontrolled</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>